Obtener status de perfil-completado
