# docs/swagger.yaml
@@ -35,6 +35,11 @@ definitions:
     required:
     - email
     type: object
+  auth.ProfileStatusResponse:
+    properties:
+      perfil_completado:
+        type: boolean
+    type: object
   auth.ProfileUpdateRequest:
     properties:
       ano_ingreso:
@@ -196,6 +201,37 @@ paths:
       summary: Envía un correo de recuperación de contraseña
       tags:
       - password
+  /profile-status:
+    get:
+      description: Retorna si el perfil ha sido completado o no
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Estado del perfil
+          schema:
+            $ref: '#/definitions/auth.ProfileStatusResponse'
+        "400":
+          description: Datos inválidos
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+        "401":
+          description: Usuario no autenticado
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+        "500":
+          description: Error interno del servidor
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+      summary: Obtener estado del perfil
+      tags:
+      - profile
   /register:
     post:
       consumes:
